[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-google-docs"
version = "0.1.0"
description = "MCP server for Google Docs integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
mcp-google-docs = "main:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]

